微信小程序

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#009de2",
-    "navigationBarTitleText": "富辉不锈钢",
+    "navigationBarTitleText": "XX不锈钢",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
