--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
-	"appid": "wx2bcfa41e36292868",
+	"appid": "wx5ccf17bdca7d897d",
 	"projectname": "qql",
 	"debugOptions": {
 		"hidedInDevtools": []
